Remove emoji from submit button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <!-- Submit button -->
             <button id="submit-guess" disabled>
-                <span>🎯 SUBMIT GUESS</span>
+                <span>SUBMIT GUESS</span>
             </button>
 
             <!-- Feedback panel (right side) -->
